--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -1,1 +1,108 @@
-# TP3
+---
+hide_table_of_contents: true
+---
+
+# Travail 3 : Améliorations
+
+<Row>
+
+<Column>
+
+Dans cette phase 3, nous allons apporter des améliorations à votre projet.
+
+</Column>
+
+<Column>
+
+### Git
+
+&#8203;<Highlight color="tip">1 point</Highlight> Un minimum de 4 commits de tailles comparables.
+
+</Column>
+
+</Row>
+
+:::note Améliorations
+
+<Row>
+
+<Column>
+
+### Gestion des erreurs
+
+&#8203;<Highlight color="tip">5 points</Highlight> Votre application doit gérer les différents cas d'erreurs. Par exemple,
+
+- Si l'utilisateur n'est pas authentifié
+- Si l'utilisateur n'est plus authentifié ou a été déconnecté
+- Si l'utilisateur envoie une requête erronée (nombre de caractères minimum, nom de tâche existant, ...)
+- Si le réseau n'est pas disponible (vous pouvez tester en passant l'appareil en mode avion)
+- Etc.
+
+Vous devez programmer l'affichage d'un message d'erreur clair dans l'**interface** pour tous les cas possibles dans toutes les activités de l'application.
+
+**RAPPEL** : Tous les messages d'erreur doivent être traduits pour les 2 langues.
+
+</Column>
+
+<Column>
+
+### Attente dans l'interface graphique
+
+Note: vous pouvez modifier le délai d'attente du serveur dans le fichier [ConfigHTTP.java](https://github.com/departement-info-cem/KickMyB-Server/blob/main/src/main/java/org/kickmyb/server/ConfigHTTP.java) en changeant la valeur dans le Thread.sleep.
+
+&#8203;<Highlight color="tip">4 points</Highlight> Quand vous envoyez une requête au serveur, la réponse n'est pas immédiate. Pour une action vous devez:
+
+- Indiquer à l'utilisateur qu'il se passe quelque chose
+- Désactiver l'action qu'il vient de déclencher pour éviter que l'utilisateur puisse envoyer des requêtes
+
+Pour chaque consultation (liste et consultation) vous devez :
+
+- Indiquer à l'utilisateur que le chargement est en cours
+- Afficher les informations quand elles sont reçues
+
+L'interface doit revenir dans un état fonctionnel après le chargement, que le résultat soit correct ou en cas d'erreur.
+
+**RAPPEL** : Tous les messages d'erreur doivent être traduits pour les 2 langues.
+
+</Column>
+
+</Row>
+
+
+<Row>
+
+<Column>
+
+### Mises à jour de l'interface
+
+&#8203;<Highlight color="tip">1 point</Highlight> Ajouter un logo personnalisé à votre application. Le choix vous appartient, mais le logo doit être libre de droit.
+
+&#8203;<Highlight color="danger">Notation négative ! Attention ! </Highlight> Votre projet doit être lisible et fonctionnel en mode portrait ET paysage pour chaque activité. Vous perdez 1 point pour chaque activité où un élément n'est pas accessible ou fonctionnel dans un ou l'autre des modes portrait et paysage.
+
+</Column>
+
+<Column/>
+
+</Row>
+
+:::
+
+:::note Capture du drapeau / faille de sécurité du serveur
+
+Notre serveur contient une faille de contrôle d'accès sur la mise à jour du pourcentage d'une tâche. Vous devez trouver un moyen d'exploiter cette faille. Pendant la séance 13.2 vous devrez montrer que vous êtes capables de modifier une tâche qui ne vous appartient pas.
+
+1. &#8203;<Highlight color="tip">3 points</Highlight> Tu dois montrer pendant la séance 13.2 que tu es capable de modifier une tâche qui ne t'appartient pas.
+2. &#8203;<Highlight color="tip">1 point</Highlight> **UNIQUEMENT SI TU AS RÉSSI À EXPLOITER LA FAILLE**, explique en détails les étapes qui t'ont permis d'exploiter la faille de sécurité dans un fichier nommé faille.md à la racine de ton projet.
+
+:::
+
+:::danger Attention!
+
+&#8203;<Highlight color="danger">5 points négatifs</Highlight> L'application fonctionne sans plantage et correctement. Ce pointage fonctionne en négatif. Si l'application fonctionne correctement en tout temps, vous conservez votre note. Dans le cas contraire, vous perdez des points avec un maximum de 5.
+
+- Plantage de l'application <Highlight color="danger">-1 point</Highlight>
+- Interface illisible <Highlight color="danger">-1 point</Highlight>
+- Information affichée incohérente <Highlight color="danger">-1 point</Highlight>
+- Autre cas ...
+
+:::
