"principale" modifié pour "d'accueil"
Un bouton inscription qui mène à l'activité principale (un utilisateur qui crée un compte est automatiquement connecté)

--- a/web/docs/02-tp/01-tp1.md
+++ b/web/docs/02-tp/01-tp1.md
@@ -44,7 +44,7 @@ Activité d'inscription permet à l'utilisateur de créer un compte.
 - Un champ pour le nom de l'utilisateur
 - Un champ pour le mot de passe qui est caché (.....)
 - Un champ pour la confirmation du mot de passe qui est caché (.....)
-- Un bouton inscription qui mène à l'activité principale (un utilisateur qui crée un compte est automatiquement connecté)
+- Un bouton inscription qui mène à l'activité d'accueil (un utilisateur qui crée un compte est automatiquement connecté)
 
 </Column>
 
