--- a/web/docs/02-tp/01-tp1.md
+++ b/web/docs/02-tp/01-tp1.md
@@ -67,9 +67,9 @@ L'application doit démarrer sur une activité connexion.
 
 L'activité d'accueil affiche la liste des tâches de l'utilisateur.
 
-- &#8203;<Highlight color="tip">1 point</Highlight> point Il faut une option / menu / bouton qui mène à l'activité de création d'une tâche
-- &#8203;<Highlight color="tip">1 point</Highlight> point Un appui sur un item de la liste mène à l'activité de consultation
-- &#8203;<Highlight color="tip">3 points</Highlight> points Une liste en mode recyclerView. Pour chaque élément d'information, vous pouvez choisir d'afficher du texte et/ou un élément graphique. Vous devez faire preuve d'imagination pour l'affichage. Chaque item de la liste contient:
+- &#8203;<Highlight color="tip">1 point</Highlight> Il faut une option / menu / bouton qui mène à l'activité de création d'une tâche
+- &#8203;<Highlight color="tip">1 point</Highlight> Un appui sur un item de la liste mène à l'activité de consultation
+- &#8203;<Highlight color="tip">3 points</Highlight> Une liste en mode recyclerView. Pour chaque élément d'information, vous pouvez choisir d'afficher du texte et/ou un élément graphique. Vous devez faire preuve d'imagination pour l'affichage. Chaque item de la liste contient:
   - Le nom de la tâche
   - Son pourcentage d'avancement de la tâche (ex: 30%)
   - Le temps écoulé depuis la création de la tâche (ex: 3 jours / 7)
@@ -124,9 +124,9 @@ On a le nom de l'utilisateur courant affiché. Il y a les options Accueil, Ajout
 
 </Row>
 
-### Multilingue
+### <Highlight color="tip">2 points</Highlight> Multilingue
 
-&#8203;<Highlight color="tip">2 point</Highlight> Vous devez traduire tous les textes de l'interface graphique existante en français et anglais.
+Vous devez traduire tous les textes de l'interface graphique existante en français et anglais.
 
 L'orthographe doit être correcte, les textes ne doivent pas contenir de fautes dans la version française.
 
