--- a/web/docs/02-tp/01-tp1.md
+++ b/web/docs/02-tp/01-tp1.md
@@ -69,7 +69,7 @@ L'activité d'accueil affiche la liste des tâches de l'utilisateur.
 
 - &#8203;<Highlight color="tip">1 point</Highlight> Il faut une option / menu / bouton qui mène à l'activité de création d'une tâche
 - &#8203;<Highlight color="tip">1 point</Highlight> Un appui sur un item de la liste mène à l'activité de consultation
-- &#8203;<Highlight color="tip">3 points</Highlight> Une liste en mode recyclerView. Pour chaque élément d'information, vous pouvez choisir d'afficher du texte et/ou un élément graphique. Vous devez faire preuve d'imagination pour l'affichage. Chaque item de la liste contient:
+- &#8203;<Highlight color="tip">3 points</Highlight> Une liste en mode recyclerView. Pour chaque élément d'information, vous pouvez choisir d'afficher du texte et/ou un élément graphique. Vous devez faire preuve d'imagination pour l'affichage. Chaque item de la liste contient :
   - Le nom de la tâche
   - Son pourcentage d'avancement de la tâche (ex: 30%)
   - Le temps écoulé depuis la création de la tâche (ex: 3 jours / 7)
@@ -124,9 +124,9 @@ On a le nom de l'utilisateur courant affiché. Il y a les options Accueil, Ajout
 
 </Row>
 
-### <Highlight color="tip">2 points</Highlight> Multilingue
+### Multilingue
 
-Vous devez traduire tous les textes de l'interface graphique existante en français et anglais.
+&#8203;<Highlight color="tip">2 points</Highlight> Vous devez traduire tous les textes de l'interface graphique existante en français et anglais.
 
 L'orthographe doit être correcte, les textes ne doivent pas contenir de fautes dans la version française.
 
