--- a/web/docs/02-tp/01-tp1.md
+++ b/web/docs/02-tp/01-tp1.md
@@ -75,7 +75,7 @@ L'activité d'accueil affiche la liste des tâches de l'utilisateur.
   - Le temps écoulé depuis la création de la tâche (ex : 3 jours / 7)
   - La date limite
 
-Votre activité doit montrer une liste d'au moins 200 items codés en dur
+Votre activité doit montrer une liste d'au moins 200 items codés en dur.
 
 </Column>
 
