--- a/web/docs/02-tp/01-tp1.md
+++ b/web/docs/02-tp/01-tp1.md
@@ -101,7 +101,7 @@ L'activité de création permet de créer une tâche qui s'ajoutera dans la list
 
 L'activité de consultation permet de voir le nom et la date de la tâche. Elle permet de changer le pourcentage d'avancement.
 
-- &#8203;<Highlight color="tip">1 point</Highlight> Présence des éléments suivants
+- &#8203;<Highlight color="tip">1 point</Highlight> Présence des éléments suivants :
   - On voit le nom et la date d'échéance de la tâche
   - On voit le pourcentage d'avancement
   - On voit le temps écoulé depuis la création de la tâche
@@ -116,7 +116,7 @@ L'activité de consultation permet de voir le nom et la date de la tâche. Elle 
 Il permet d'accéder rapidement à toutes les activités principales :
 
 - &#8203;<Highlight color="tip">1 point</Highlight> Le tiroir est **présent** dans toutes les activités **SAUF** inscription et connexion.
-On a le nom de l'utilisateur courant affiché. Il y a les options Accueil, Ajout de tâche et Déconnexion.
+On a le nom de l'utilisateur courant affiché. Il y a les options **Accueil**, **Ajout de tâche** et **Déconnexion**.
 - &#8203;<Highlight color="tip">3 points</Highlight> Le tiroir **fonctionne** dans toutes les activités **SAUF** inscription et connexion. Accueil amène à l'activité d'Accueil, Ajout de tâche amène à l'activité d'Ajout de tâche et Déconnexion amène à l'activité de Connexion.
 - &#8203;<Highlight color="tip">1 point</Highlight> Il y a le hamburger dans l'ActionBar qui déclenche le tiroir
 
