Ajout d'un fichier pour héberger l'url

--- a/web/docs/02-tp/02-tp2.md
+++ b/web/docs/02-tp/02-tp2.md
@@ -102,9 +102,11 @@ Vous codez les appels pour l'écran de consultation / modification d'une tâche.
 
 ### Déploiement du code serveur sur une instance cloud
 
-<Highlight color="tip">2 points</Highlight> Vous devez déployer le code du serveur sur une instance Render.
+<Highlight color="tip">2 points</Highlight> Déployez le code du serveur sur une instance Render.
+Vous indiquerez l'url de votre serveur dans un fichier **url-serveur.md** à la racine du projet.
 
-<Highlight color="tip">1 point</Highlight>Votre projet remis doit pointer vers votre instance cloud.
+
+<Highlight color="tip">1 point</Highlight>Le projet remis pointe vers votre instance cloud (Render).
 
 </Column>
 
