--- a/web/docs/02-tp/01-tp1.md
+++ b/web/docs/02-tp/01-tp1.md
@@ -75,7 +75,7 @@ L'activité d'accueil affiche la liste des tâches de l'utilisateur.
   - Le temps écoulé depuis la création de la tâche (ex : 3 jours / 7)
   - La date limite
 
-Votre activité doit montrer une liste d'au moins 200 items codés en dur.
+Votre activité doit montrer une liste d'au moins 200 items codés en dur avec un nom et une date de votre choix.
 
 </Column>
 
@@ -107,6 +107,8 @@ L'activité de consultation permet de voir le nom et la date de la tâche. Elle 
   - On voit le temps écoulé depuis la création de la tâche
 - &#8203;<Highlight color="tip">2 points</Highlight> Il y a un moyen pour modifier le pourcentage d'avancement
 
+Les informations affichées sont codées en dur en attendant le TP2.
+
 </Column>
 
 <Column>
@@ -116,7 +118,7 @@ L'activité de consultation permet de voir le nom et la date de la tâche. Elle 
 Il permet d'accéder rapidement à toutes les activités principales :
 
 - &#8203;<Highlight color="tip">1 point</Highlight> Le tiroir est **présent** dans toutes les activités **SAUF** inscription et connexion.
-On a le nom de l'utilisateur courant affiché. Il y a les options **Accueil**, **Ajout de tâche** et **Déconnexion**.
+On a le nom de l'utilisateur courant affiché (codé en dur). Il y a les options **Accueil**, **Ajout de tâche** et **Déconnexion**.
 - &#8203;<Highlight color="tip">3 points</Highlight> Le tiroir **fonctionne** dans toutes les activités **SAUF** inscription et connexion. Accueil amène à l'activité d'Accueil, Ajout de tâche amène à l'activité d'Ajout de tâche et Déconnexion amène à l'activité de Connexion.
 - &#8203;<Highlight color="tip">1 point</Highlight> Il y a le hamburger dans l'ActionBar qui déclenche le tiroir
 
