--- a/web/docs/02-tp/01-tp1.md
+++ b/web/docs/02-tp/01-tp1.md
@@ -72,7 +72,7 @@ L'activité d'accueil affiche la liste des tâches de l'utilisateur.
 - &#8203;<Highlight color="tip">3 points</Highlight> Une liste en mode recyclerView. Pour chaque élément d'information, vous pouvez choisir d'afficher du texte et/ou un élément graphique. Vous devez faire preuve d'imagination pour l'affichage. Chaque item de la liste contient :
   - Le nom de la tâche
   - Son pourcentage d'avancement de la tâche (ex : 30%)
-  - Le temps écoulé depuis la création de la tâche (ex : 3 jours / 7)
+  - Le pourcentage de temps écoulé entre la date de création et la date limite (en pourcentage)
   - La date limite
 
 Votre activité doit montrer une liste d'au moins 200 items codés en dur avec un nom et une date de votre choix.
