*FAB* (*Floating Action Button*)

--- a/web/docs/02-tp/01-tp1.md
+++ b/web/docs/02-tp/01-tp1.md
@@ -67,8 +67,8 @@ L'application doit démarrer sur une activité connexion.
 
 L'activité d'accueil affiche la liste des tâches de l'utilisateur.
 
-- &#8203;<Highlight color="tip">1 point</Highlight> Il faut une option / menu / bouton qui mène à l'activité de création d'une tâche
-- &#8203;<Highlight color="tip">1 point</Highlight> Un appui sur un item de la liste mène à l'activité de consultation
+- &#8203;<Highlight color="tip">1 point</Highlight> Il faut un bouton de type *FAB* (*Floating Action Button*) qui mène à l'activité de création d'une tâche.
+- &#8203;<Highlight color="tip">1 point</Highlight> Un appui sur un item de la liste mène à l'activité de consultation.
 - &#8203;<Highlight color="tip">3 points</Highlight> Une liste en mode recyclerView. Pour chaque élément d'information, vous pouvez choisir d'afficher du texte et/ou un élément graphique. Vous devez faire preuve d'imagination pour l'affichage. Chaque item de la liste contient :
   - Le nom de la tâche
   - Son pourcentage d'avancement de la tâche (ex : 30%)
