Ce serait mieux s'ils étaient d'Alexandrie.

--- a/web/docs/02-tp/02-tp2.md
+++ b/web/docs/02-tp/02-tp2.md
@@ -64,7 +64,7 @@ Vous devez vous assurer que votre application gère correctement les cookies, c'
 La déconnexion se fait à partir du tiroir de navigation. Elle doit être fonctionnel dans toutes les activités avec le tiroir.
 
 - &#8203;<Highlight color="tip">1 point</Highlight> **`/api/id/signout`** en **POST**
-- &#8203;<Highlight color="tip">1 point</Highlight> la déconnexion fonctionne dans toutes les activités avec tiroir de navigation.
+- &#8203;<Highlight color="tip">1 point</Highlight> La déconnexion fonctionne dans toutes les activités avec tiroir de navigation.
 
 </Column>
 
@@ -106,7 +106,7 @@ Vous codez les appels pour l'écran de consultation / modification d'une tâche.
 Vous indiquerez l'url de votre serveur dans un fichier **url-serveur.md** à la racine du projet.
 
 
-<Highlight color="tip">1 point</Highlight>Le projet remis pointe vers votre instance cloud (Render).
+<Highlight color="tip">1 point</Highlight> Le projet remis pointe vers votre instance cloud (Render).
 
 </Column>
 
