Descends tout-de-suite de ce se-phinx.

--- a/web/docs/02-tp/02-tp2.md
+++ b/web/docs/02-tp/02-tp2.md
@@ -61,7 +61,7 @@ Vous devez vous assurer que votre application gère correctement les cookies, c'
 
 ### Déconnexion
 
-La déconnexion se fait à partir du tiroir de navigation. Elle doit être fonctionnel dans toutes les activités avec le tiroir.
+La déconnexion se fait à partir du tiroir de navigation. Elle doit être fonctionnelle dans toutes les activités avec le tiroir.
 
 - &#8203;<Highlight color="tip">1 point</Highlight> **`/api/id/signout`** en **POST**
 - &#8203;<Highlight color="tip">1 point</Highlight> La déconnexion fonctionne dans toutes les activités avec tiroir de navigation.
