On va souvent à la mer ensemble.

--- a/web/docs/02-tp/02-tp2.md
+++ b/web/docs/02-tp/02-tp2.md
@@ -89,7 +89,7 @@ Vous codez l'appel qui permet de récupérer la liste des tâches sur l'écran d
 
 ### Consultation et avancement
 
-**ATTENTION SI VOUS POUVEZ PAS CRÉER DE TÂCHE, VOUS NE POURREZ PAS FAIRE LA SUITE.**
+**ATTENTION SI VOUS NE POUVEZ PAS CRÉER DE TÂCHE, VOUS NE POURREZ PAS FAIRE LA SUITE.**
 
 Vous codez les appels pour l'écran de consultation / modification d'une tâche.
 
