--- a/web/docs/02-tp/02-tp2.md
+++ b/web/docs/02-tp/02-tp2.md
@@ -93,7 +93,7 @@ Vous codez l'appel qui permet de récupérer la liste des tâches sur l'écran d
 
 Vous codez les appels pour l'écran de consultation / modification d'une tâche.
 
-- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/detail/{id}`** GET prend l'id de la tâche et renvoie un TaskDetailResponse. Permet la récupération du détail de la tâche.
+- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/detail/{id}`** GET envoie l'id de la tâche et reçoit un TaskDetailResponse. Permet la récupération du détail de la tâche.
 - &#8203;<Highlight color="tip">1 point</Highlight> **`/api/progress/{id}/{valeur}`** GET envoie l'id de la tâche et la nouvelle valeur d'avancement entre 0 et 100. Permet de changer le pourcentage d'avancement
 
 </Column>
