--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -77,7 +77,7 @@ L'interface doit revenir dans un état fonctionnel après le chargement, que le 
 
 &#8203;<Highlight color="tip">1 point</Highlight> Ajouter un logo personnalisé à votre application. Le choix vous appartient, mais le logo doit être libre de droit.
 
-&#8203;<Highlight color="danger">Notation négative ! Attention !</Highlight> Votre projet doit être lisible et fonctionnel en mode portrait ET paysage pour chaque activité. Vous perdez 1 point pour chaque activité où un élément n'est pas accessible ou fonctionnel dans un ou l'autre des modes portrait et paysage.
+&#8203;<Highlight color="danger">Notation négative! Attention!</Highlight> Votre projet doit être lisible et fonctionnel en mode portrait ET paysage pour chaque activité. Vous perdez 1 point pour chaque activité où un élément n'est pas accessible ou fonctionnel dans un ou l'autre des modes portrait et paysage.
 
 </Column>
 
@@ -92,7 +92,7 @@ L'interface doit revenir dans un état fonctionnel après le chargement, que le 
 Notre serveur contient une faille de contrôle d'accès sur la mise à jour du pourcentage d'une tâche. Vous devez trouver un moyen d'exploiter cette faille. Pendant la séance 13.2 vous devrez montrer que vous êtes capables de modifier une tâche qui ne vous appartient pas.
 
 1. &#8203;<Highlight color="tip">3 points</Highlight> Tu dois montrer pendant la séance 13.2 que tu es capable de modifier une tâche qui ne t'appartient pas.
-2. &#8203;<Highlight color="tip">1 point</Highlight> **UNIQUEMENT SI TU AS RÉSSI À EXPLOITER LA FAILLE**, explique en détails les étapes qui t'ont permis d'exploiter la faille de sécurité dans un fichier nommé faille.md à la racine de ton projet.
+2. &#8203;<Highlight color="tip">1 point</Highlight> **UNIQUEMENT SI TU AS RÉUSSI À EXPLOITER LA FAILLE**, explique en détails les étapes qui t'ont permis d'exploiter la faille de sécurité dans un fichier nommé faille.md à la racine de ton projet.
 
 :::
 
