Modif sur tp3, erreurs

--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -30,15 +30,18 @@ Dans cette phase 3, nous allons apporter des améliorations à votre projet.
 
 ### Gestion des erreurs
 
-&#8203;<Highlight color="tip">5 points</Highlight> Votre application doit gérer les différents cas d'erreurs. Par exemple,
 
-- Si l'utilisateur n'est pas authentifié
-- Si l'utilisateur n'est plus authentifié ou a été déconnecté
-- Si l'utilisateur envoie une requête erronée (nombre de caractères minimum, nom de tâche existant, ...)
-- Si le réseau n'est pas disponible (vous pouvez tester en passant l'appareil en mode avion)
-- Etc.
+&#8203;<Highlight color="tip">4 points</Highlight> 
+Votre application doit afficher des messages d'erreur significatifs 
+(qui indique une solution quand c'est possible). 
+Cela inclut les cas où l'utilisateur donne de mauvaises données (validation, trop court, existant etc.), 
+les erreurs d'accès au serveur etc. Cet aspect sera corrigé en détail sur:
+- la création d'un compte : message si les mots de passe ne concordent pas, si l'accès réseau est impossible, si le nom utilisateur est déjà pris etc.
+- l'écran de la liste de tâches : message si pas de réseau, vous devez fournir une option pour recharger les données dans ce cas.
 
-Vous devez programmer l'affichage d'un message d'erreur clair dans l'**interface** pour tous les cas possibles dans toutes les activités de l'application.
+
+&#8203;<Highlight color="tip">1 point</Highlight> 
+Vous implantez les messages d'erreur pour tous les autres écrans de l'application.
 
 **RAPPEL** : Tous les messages d'erreur doivent être traduits pour les 2 langues.
 
