modifications messages erreur

--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -33,15 +33,15 @@ Dans cette phase 3, nous allons apporter des améliorations à votre projet.
 
 &#8203;<Highlight color="tip">4 points</Highlight> 
 Votre application doit afficher des messages d'erreur significatifs 
-(qui indique une solution quand c'est possible). 
-Cela inclut les cas où l'utilisateur donne de mauvaises données (validation, trop court, existant etc.), 
-les erreurs d'accès au serveur etc. Cet aspect sera corrigé en détail sur:
-- la création d'un compte : message si les mots de passe ne concordent pas, si l'accès réseau est impossible, si le nom utilisateur est déjà pris etc.
-- l'écran de la liste de tâches : message si pas de réseau, vous devez fournir une option pour recharger les données dans ce cas.
+(qui indiquent une solution quand c'est possible). 
+Cela inclut les cas où l'utilisateur donne de mauvaises données (validation, trop court, existant, etc.), 
+et les erreurs d'accès au serveur. Cet aspect sera corrigé en détail sur :
+- la création d'un compte : message si les mots de passe ne concordent pas, si l'accès réseau est impossible, ou si le nom utilisateur est déjà pris.
+- l'écran de la liste de tâches : message si pas de réseau (vous devez fournir une option pour recharger les données dans ce cas).
 
 
 &#8203;<Highlight color="tip">1 point</Highlight> 
-Vous implantez les messages d'erreur pour tous les autres écrans de l'application.
+Vous implantez les messages d'erreur pour tous les écrans de l'application.
 
 **RAPPEL** : Tous les messages d'erreur doivent être traduits pour les 2 langues.
 
@@ -65,7 +65,7 @@ Pour chaque consultation (liste et consultation) vous devez :
 
 L'interface doit revenir dans un état fonctionnel après le chargement, que le résultat soit correct ou en cas d'erreur.
 
-**RAPPEL** : Tous les messages d'erreur doivent être traduits pour les 2 langues.
+**RAPPEL** : Tous les messages doivent être traduits pour les 2 langues.
 
 </Column>
 
