--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -36,7 +36,7 @@ Votre application doit afficher des messages d'erreur significatifs
 (qui indiquent une solution quand c'est possible). 
 Cela inclut les cas où l'utilisateur donne de mauvaises données (validation, trop court, existant, etc.), 
 et les erreurs d'accès au serveur. Cet aspect sera corrigé en détail sur :
-- la création d'un compte : message si les mots de passe ne concordent pas, si l'accès réseau est impossible, ou si le nom utilisateur est déjà pris.
+- la création d'un compte : message si les mots de passe ne concordent pas, si l'accès réseau est impossible, si le nom utilisateur est déjà pris, etc.
 - l'écran de la liste de tâches : message si pas de réseau (vous devez fournir une option pour recharger les données dans ce cas).
 
 
