Post rencontre avec Mathieu

--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -8,7 +8,11 @@ hide_table_of_contents: true
 
 <Column>
 
-Dans cette phase 3, nous allons apporter des améliorations à votre projet.
+Dans cette phase 3, nous allons apporter des améliorations à votre projet. 
+
+TODO AJOUTER LA SUPRESSION SUR LE BACKEND ET FRONTEND 
+
+TODO AJOUTER LES CORRECTIFS POUR RECTIFIER LE CONTROLE D'ACCES
 
 </Column>
 
