--- a/web/docs/03-recettes/retrofit-03-liste.mdx
+++ b/web/docs/03-recettes/retrofit-03-liste.mdx
@@ -4,6 +4,13 @@ hide_table_of_contents: true
 
 # Retrofit - Appels HTTP avec une liste
 
+ATTENTION : L'outil principal de débogage pour les appels réseaux est le network inspector dans Android Studio.
+1. Cliquer sur Fichier / File ou le symbole  ☰ en haut à gauche
+2. Choisir View / Tool Windows / AppInspection
+3. Dans la fenêtre AppInspection, choisir l'onglet **Network Inspector**
+4. Tu devrais voir apparaître les appels réseaux de ton application
+
+
 Dans cette recette, nous allons voir comment :
 
 - Réagir à un clic sur un élément d'une liste dans un `RecyclerView`.
