Révisions des 3 TP

--- a/web/docs/02-tp/01-tp1.md
+++ b/web/docs/02-tp/01-tp1.md
@@ -27,7 +27,11 @@ Vous allez mettre en place l'application en commençant par **l'interface graphi
 
 ### Repository Git
 
-&#8203;<Highlight color="tip">2 points</Highlight> Un minimum de 6 commits de tailles comparables. Au moins un commit par activité. De plus, il n'y a pas un commit avec tout dedans et les autres vides. Les commits décrivent l'avancement du projet dans un français correct (passe Word). (Instructions : [ici](https://info.cegepmontpetit.ca/git) & [ici](../cours/git) )
+&#8203;<Highlight color="tip">2 points</Highlight> 
+Un minimum de 6 commits de tailles comparables. Au moins un commit par activité. 
+De plus, il n'y a pas un commit avec tout dedans et les autres vides. 
+Les commits décrivent l'avancement du projet dans un français correct (passe Word). (Instructions : [ici](https://info.cegepmontpetit.ca/git) & [ici](../cours/git) )
+Ces points sont conditionnés à la remise d'au moins un commit toutes à chaque 2 séances de cours.
 
 </Column>
 
@@ -126,11 +130,29 @@ On a le nom de l'utilisateur courant affiché (codé en dur). Il y a les options
 
 </Row>
 
+<Row>
+
+<Column>
+
+### Mises à jour de l'interface
+
+&#8203;<Highlight color="tip">1 point</Highlight> Ajouter un logo personnalisé à votre application. Le choix vous appartient, mais le logo doit être libre de droit.
+
+&#8203;<Highlight color="danger">Notation négative!</Highlight> Votre projet doit être lisible et fonctionnel en mode portrait ET paysage pour chaque activité. Vous perdez 1 point pour chaque activité où un élément n'est pas accessible ou fonctionnel dans un ou l'autre des modes portrait et paysage.
+
+</Column>
+
+<Column>
+
 ### Multilingue
 
 &#8203;<Highlight color="tip">2 points</Highlight> Vous devez traduire tous les textes de l'interface graphique existante en français et anglais.
 
 L'orthographe doit être correcte, les textes ne doivent pas contenir de fautes dans la version française.
+</Column>
+
+</Row>
+
 
 :::danger Attention!
 
