--- a/web/docs/02-tp/02-tp2.md
+++ b/web/docs/02-tp/02-tp2.md
@@ -34,6 +34,7 @@ Dans la phase 2, vous connecterez votre interface graphique de la phase 1 au ser
 
 Il n'y a pas un commit avec tout dedans et les autres vides. Les commits décrivent l'avancement du projet dans un français correct (passe Word).
 
+Ces points sont conditionnés à la remise d'au moins un commit toutes à chaque 2 séances de cours.
 </Column>
 
 </Row>
