--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -4,27 +4,69 @@ hide_table_of_contents: true
 
 # Travail 3 : Améliorations
 
+
+&#8203;<Highlight color="tip">1 point</Highlight> **Git** Un minimum de 4 commits de tailles comparables.
+Ces points sont conditionnés à la remise d'au moins un commit toutes à chaque 2 séances de cours.
+
+
+
+
+
+:::tip Suppressions des tâches
+
 <Row>
 
 <Column>
 
-Dans cette phase 3, nous allons apporter des améliorations à votre projet. 
+### Suppression dans le serveur
 
-TODO AJOUTER LA SUPRESSION SUR LE BACKEND ET FRONTEND 
 
-TODO AJOUTER LES CORRECTIFS POUR RECTIFIER LE CONTROLE D'ACCES
+&#8203;<Highlight color="tip">4 points</Highlight>
+Vous devez modifier le serveur fourni pour permettre la suppression d'une tâche. Il faut:
+- Ajouter une route (POST GET DELETE + url) dans un controleur.
+- Ajouter une méthode dans le service pour supprimer une tâche.
+- Utiliser le repository pour la suppression.
+
+&#8203;<Highlight color="tip">1 point</Highlight>
+Implanter le contrôle d'accès: vérifier que l'utilisateur est bien le propriétaire de la tâche avant de la supprimer.
 
 </Column>
 
 <Column>
 
-### Git
+### Suppression dans l'interface graphique
 
-&#8203;<Highlight color="tip">1 point</Highlight> Un minimum de 4 commits de tailles comparables.
+Vous pouvez choisir l'endroit dans l'interface où implanter la suppression (dans la liste, dans la consultation)
+ainsi que le moyen de déclencher la suppression (bouton, swipe, etc.)
+
+&#8203;<Highlight color="tip">2 points</Highlight> 
+La suppression est implantée dans l'interface graphique. L'interface se met à jour après la suppression.
 
 </Column>
 
 </Row>
+
+
+:::
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 :::note Améliorations
 
@@ -35,7 +77,7 @@ TODO AJOUTER LES CORRECTIFS POUR RECTIFIER LE CONTROLE D'ACCES
 ### Gestion des erreurs
 
 
-&#8203;<Highlight color="tip">4 points</Highlight> 
+&#8203;<Highlight color="tip">2 points</Highlight> 
 Votre application doit afficher des messages d'erreur significatifs 
 (qui indiquent une solution quand c'est possible). 
 Cela inclut les cas où l'utilisateur donne de mauvaises données (validation, trop court, existant, etc.), 
@@ -43,9 +85,6 @@ et les erreurs d'accès au serveur. Cet aspect sera corrigé en détail sur :
 - la création d'un compte : message si les mots de passe ne concordent pas, si l'accès réseau est impossible, si le nom utilisateur est déjà pris, etc.
 - l'écran de la liste de tâches : message si pas de réseau (vous devez fournir une option pour recharger les données dans ce cas).
 
-
-&#8203;<Highlight color="tip">1 point</Highlight> 
-Vous implantez les messages d'erreur pour tous les écrans de l'application.
 
 **RAPPEL** : Tous les messages d'erreur doivent être traduits pour les 2 langues.
 
@@ -57,7 +96,7 @@ Vous implantez les messages d'erreur pour tous les écrans de l'application.
 
 Note: vous pouvez modifier le délai d'attente du serveur dans le fichier [ConfigHTTP.java](https://github.com/departement-info-cem/KickMyB-Server/blob/main/src/main/java/org/kickmyb/server/ConfigHTTP.java) en changeant la valeur dans le Thread.sleep.
 
-&#8203;<Highlight color="tip">4 points</Highlight> Quand vous envoyez une requête au serveur, la réponse n'est pas immédiate. Pour une action vous devez:
+&#8203;<Highlight color="tip">2 points</Highlight> Quand vous envoyez une requête au serveur, la réponse n'est pas immédiate. Pour une action vous devez:
 
 - Indiquer à l'utilisateur qu'il se passe quelque chose
 - Désactiver l'action qu'il vient de déclencher pour éviter que l'utilisateur puisse envoyer des requêtes
@@ -76,30 +115,15 @@ L'interface doit revenir dans un état fonctionnel après le chargement, que le 
 </Row>
 
 
-<Row>
-
-<Column>
-
-### Mises à jour de l'interface
-
-&#8203;<Highlight color="tip">1 point</Highlight> Ajouter un logo personnalisé à votre application. Le choix vous appartient, mais le logo doit être libre de droit.
-
-&#8203;<Highlight color="danger">Notation négative! Attention!</Highlight> Votre projet doit être lisible et fonctionnel en mode portrait ET paysage pour chaque activité. Vous perdez 1 point pour chaque activité où un élément n'est pas accessible ou fonctionnel dans un ou l'autre des modes portrait et paysage.
-
-</Column>
-
-<Column/>
-
-</Row>
-
 :::
 
-:::note Capture du drapeau / faille de sécurité du serveur
+:::caution Capture du drapeau / faille de sécurité du serveur
 
 Notre serveur contient une faille de contrôle d'accès sur la mise à jour du pourcentage d'une tâche. Vous devez trouver un moyen d'exploiter cette faille. Pendant la séance 13.2 vous devrez montrer que vous êtes capables de modifier une tâche qui ne vous appartient pas.
 
 1. &#8203;<Highlight color="tip">3 points</Highlight> Tu dois montrer pendant la séance 13.2 que tu es capable de modifier (une seule) tâche qui ne t'appartient pas, selon les modalités données en classe.
 2. &#8203;<Highlight color="tip">1 point</Highlight> **UNIQUEMENT SI TU AS RÉUSSI À EXPLOITER LA FAILLE**, explique en détails les étapes qui t'ont permis d'exploiter la faille de sécurité dans un fichier nommé faille.md à la racine de ton projet. Mets ton fichier explicatif à la racine de ton TP3.
+3. &#8203;<Highlight color="tip">3 points</Highlight> Tu dois corriger la faille dans le serveur modifié que tu remets avec ton TP3.
 
 :::
 
