--- a/web/docs/03-recettes/retrofit-02-objet.mdx
+++ b/web/docs/03-recettes/retrofit-02-objet.mdx
@@ -2,7 +2,7 @@
 hide_table_of_contents: true
 ---
 
-# Retrofit - Appels HTTP sur un objet complexe
+# Retrofit 2 - HTTP depuis une activité
 
 ATTENTION : L'outil principal de débogage pour les appels réseaux est le network inspector dans Android Studio.
 1. Cliquer sur Fichier / File ou le symbole  ☰ en haut à gauche
@@ -10,230 +10,48 @@ ATTENTION : L'outil principal de débogage pour les appels réseaux est le netwo
 3. Dans la fenêtre AppInspection, choisir l'onglet **Network Inspector**
 4. Tu devrais voir apparaître les appels réseaux de ton application
 
+Regarder la recette de base pour les étapes:
+- [AndroidManifest.xml](retrofit-01-base?recette-string=AndroidManifest.xml)
+- [build.gradle](retrofit-01-base?recette-string=build.gradle)
+- [Service.kt](retrofit-01-base?recette-string=Service.kt)
+- [RetrofitUtil.kt](retrofit-01-base?recette-string=RetrofitUtil.kt)
 
-Étapes de mise en place d'un `RecyclerView` qui gère une liste d'objets sur un projet existant.
+Le code de cette recette est disponible [ici](https://github.com/departement-info-cem/4N6-Mobile/tree/main/code/Retrofit/02-GuiAsync).
 
-Le code de cette recette est disponible [ici](https://github.com/departement-info-cem/3N5-Prog3/tree/main/code/RecetteRecyclerViewObjet).
-
-La liste que nous allons afficher est une liste de `Personne` :
-
-<GHCode
-  repo="3N5-Prog3"
-  filePath="code/RecetteRecyclerViewObjet/app/src/main/java/org/depinfo/demorecyclerviewobjet/models/Personne.kt"
-  startLine="3"
-/>
+Nous allons voir comment faire un appel à notre fonction depuis une activité:
+- il va s'agir d'un appel asynchrone, autrement dit on n'attend pas la réponse pour continuer l'exécution
+- on va rattacher un objet appelé Callback à notre appel pour traiter la réponse
+- on aura 3 cas
+  - un succès soit une réponse HTTP avec le code 200
+  - une réponse du serveur mais avec un code d'erreur
+  - un échec à recevoir une réponse
 
 <Tabs queryString="recette-objet">
-  <TabItem value="build.gradle.kts" label="build.gradle.kts">
-
-    Nous allons utiliser le [ViewBinding](https://developer.android.com/topic/libraries/view-binding#kts) pour la suite des choses. Assurez-vous qu'il est activé dans votre fichier `build.gradle.kts`.
-
-    ```kotlin
-    android {
-      ...
-      buildFeatures {
-        viewBinding = true
-      }
-    }
-    ```
-
-  </TabItem>
-  <TabItem value="personne_item.xml" label="personne_item.xml">
-    L'interface graphique de chaque item à afficher dans la liste est définie dans un fichier `xml`, comme c'est le cas pour les fichiers `xml` qui sont utilisés pour définir l'interface graphique.
-
-    <Row>
-
-    <Column size="7" >
-
-    Dans l'explorateur de projet, créez un nouveau fichier `Layout Resource File` dans le dossier `res/layout`.
-
-    </Column>
-
-    <Column size="5" >
-
-    Nommez le fichier `personne_item.xml`. Dans `Root element`, choisissez `LinearLayout`.
-
-    </Column>
-
-    </Row>
-
-    Il faudra personnaliser votre fichier en fonction de ce que vous voulez afficher sur chaque élément de la liste.
-
-    - Assignez des `id` aux éléments avec lesquels vous allez interagir.
-    - Attention à la hauteur de chaque élément. Ils doivent tous avoir une hauteur fixe ou une hauteur définie en fonction de leur contenu (`wrap_content`).
-
-    Voici un exemple de fichier `personne_item.xml` si on souhaite afficher les différents champs de la classe `Personne` dans différents `TextView` :
-
-    <GHCode
-      repo="3N5-Prog3"
-      filePath="code/RecetteRecyclerViewObjet/app/src/main/res/layout/personne_item.xml"
-    />
-
-  </TabItem>
-  <TabItem value="Personne.kt" label="Personne.kt">
-  
-      Créez une classe `Personne` dans un package `models` que vous devez aussi créer dans votre projet.
-  
-      <GHCode
-        repo="3N5-Prog3"
-        filePath="code/RecetteRecyclerViewObjet/app/src/main/java/org/depinfo/demorecyclerviewobjet/models/Personne.kt"
-        startLine="3"
-      />
-      
-  </TabItem>
-  <TabItem value="PersonneAdapter.kt" label="PersonneAdapter.kt">
-
-    Vous allez créer une classe qui est responsable de la gestion de **TOUS** les éléments de la liste et de leur mise à jour.
-    En Android, ce type de classe est appelé un **[Adapter](https://developer.android.com/reference/kotlin/android/widget/Adapter)**.
-
-    Créez une nouvelle classe `PersonneAdapter.kt` dans un package `adapters` que vous devez aussi créer dans votre projet.
-
-    <details>
-      <summary>ViewHolder</summary>
-
-      Dans la classe `PersonneAdapter`, vous devez définir une classe interne, qui sera responsable de gérer le contenu affiché dans **UN SEUL** élément de la liste.
-      Cette classe est appelée un **[ViewHolder](https://developer.android.com/reference/kotlin/androidx/recyclerview/widget/RecyclerView.ViewHolder)**.
-      Cette classe ressemble en quelque sorte à une classe d'**Activité**.
-
-      <GHCode
-        repo="3N5-Prog3"
-        filePath="code/RecetteRecyclerViewObjet/app/src/main/java/org/depinfo/demorecyclerviewobjet/adapters/PersonneAdapter.kt"
-        startLine="11"
-        ignore="11:22-11:112,23-31,33-45"
-      />
-
-    </details>
-
-    <details>
-      <summary>DiffCallback</summary>
-
-      Pour que l'`Adapter` sache quels éléments d'une liste doivent être affichés lorsqu'on la modifie, on doit définir un objet qui implémente la classe abstraite **[DiffUtil.ItemCallback](https://developer.android.com/reference/androidx/recyclerview/widget/DiffUtil.ItemCallback)**.
-
-      Nous vous recommandons de définir cet objet dans le même fichier que votre `Adapter`, mais à l'extérieur de la classe `PersonneAdapter`.
-
-      <GHCode
-        repo="3N5-Prog3"
-        filePath="code/RecetteRecyclerViewObjet/app/src/main/java/org/depinfo/demorecyclerviewobjet/adapters/PersonneAdapter.kt"
-        startLine="11"
-        ignore="11:22-11:112,13-31-    // Reste du code..."
-      />
-
-    </details>
-
-    <details>
-      <summary>ListAdapter</summary>
-
-      Afin d'accéder aux outils de gestion de liste fournis par Android, vous devez étendre la classe **[ListAdapter](https://developer.android.com/reference/androidx/recyclerview/widget/ListAdapter)**.
-
-      La classe a besoin du **ViewHolder** et du **DiffCallback** que vous avez défini précédemment.
-
-      <GHCode
-        repo="3N5-Prog3"
-        filePath="code/RecetteRecyclerViewObjet/app/src/main/java/org/depinfo/demorecyclerviewobjet/adapters/PersonneAdapter.kt"
-        startLine="11"
-        ignore="12-31-    // Reste du code...,33-45"
-      />
-
-      À ce point-ci, votre environnement de développement devrait vous indiquer des erreurs.
-      C'est normal, car vous n'avez pas encore implémenté les méthodes requises par la classe ListAdapter.
-
-      Pour corriger une erreur, vous pouvez placer votre curseur sur l'erreur, et cliquer sur "Implement members", ce qui va générer les méthodes.
-      Dans la prochaine étape, nous allons remplir ces méthodes.
-
-      TODO
-    </details>
-
-    <details>
-      <summary>onCreateViewHolder</summary>
-
-      La méthode `onCreateViewHolder` est appelée lorsqu'un nouvel élément de la liste doit être affiché.
-
-      <GHCode
-        repo="3N5-Prog3"
-        filePath="code/RecetteRecyclerViewObjet/app/src/main/java/org/depinfo/demorecyclerviewobjet/adapters/PersonneAdapter.kt"
-        startLine="24"
-        endLine="27"
-      />
-    </details>
-
-    <details>
-      <summary>onBindViewHolder</summary>
-
-      La méthode `onBindViewHolder` est appelée lorsqu'un élément de la liste doit être mis à jour.
-
-      <GHCode
-        repo="3N5-Prog3"
-        filePath="code/RecetteRecyclerViewObjet/app/src/main/java/org/depinfo/demorecyclerviewobjet/adapters/PersonneAdapter.kt"
-        startLine="29"
-        endLine="31"
-      />
-    </details>
-
-    <details>
-      <summary>Résultat</summary>
-
-      Votre fichier PersonneAdapter.kt devrait maintenant ressembler à ceci :
-
-      <GHCode
-        repo="3N5-Prog3"
-        filePath="code/RecetteRecyclerViewObjet/app/src/main/java/org/depinfo/demorecyclerviewobjet/adapters/PersonneAdapter.kt"
-        startLine="11"
-      />
-    </details>
-
-  </TabItem>
-  <TabItem value="ActivityMain.xml" label="ActivityMain.xml">
-
-    On ajoute le `RecyclerView` dans le fichier `xml` de l'activité.
-
-    <GHCode
-      repo="3N5-Prog3"
-      filePath="code/RecetteRecyclerViewObjet/app/src/main/res/layout/activity_main.xml"
-    />
-
-  </TabItem>
   <TabItem value="MainActivity.kt" label="MainActivity.kt">
 
-    <details>
-      <summary>ViewBinding</summary>
+    L'activité suivante utilise le [ViewBinding](https://developer.android.com/topic/libraries/view-binding#kts).
 
-      Commencez par mettre en place le ViewBinding dans votre activité.
+    Si les souvenirs sont loins, revenez à la recette du cours 3N5.
 
-      <GHCode
-        repo="3N5-Prog3"
-        filePath="code/RecetteRecyclerViewObjet/app/src/main/java/org/depinfo/demorecyclerviewobjet/MainActivity.kt"
-        startLine="13"
-        ignore="16-16,22-24,27-50"
-      />
-    </details>
+    <GHCode
+            repo="4N6-Mobile"
+            filePath="code/Retrofit/02-GuiAsync/app/src/main/java/org/depinfo/retrofit_demo/MainActivity.kt"
+            startLine="11"
+          />
 
-    <details>
-      <summary>Configurer le RecyclerView</summary>
+  </TabItem>
+  <TabItem value="debug" label="debug">
 
-      Créez une méthode pour lier l'`Adapteur` que nous venons de créer au `RecyclerView`.
+    Il est important de placer 3 points d'arrêt pour ton débogage:
 
-      <GHCode
-        repo="3N5-Prog3"
-        filePath="code/RecetteRecyclerViewObjet/app/src/main/java/org/depinfo/demorecyclerviewobjet/MainActivity.kt"
-        startLine="13"
-        ignore="19-21-        // Reste du code...,24-24,37-50"
-      />
-      
-    </details>
+    ![Retrofit 2](retrofit-2.png)
 
-    <details>
-      <summary>Remplir le RecyclerView</summary>
 
-      Remplissez le recycler view avec 10 000 éléments.
-
-      <GHCode
-        repo="3N5-Prog3"
-        filePath="code/RecetteRecyclerViewObjet/app/src/main/java/org/depinfo/demorecyclerviewobjet/MainActivity.kt"
-        startLine="13"
-        ignore="19-21-        // Reste du code...,27-36-    // Reste du code"
-      />
-
-    </details>
+    Il est aussi important d'utiliser le Network Inspector pour voir les appels réseaux:
+    1. Cliquer sur Fichier / File ou le symbole  ☰ en haut à gauche
+    2. Choisir View / Tool Windows / AppInspection
+    3. Dans la fenêtre AppInspection, choisir l'onglet **Network Inspector**
+    4. Tu devrais voir apparaître les appels réseaux de ton application
 
   </TabItem>
 </Tabs>
